test/gator/test/fixtures/manifests/wasm/with-violations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod1
spec:
  containers:
    - name: tomcat
      image: tomcat
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAll
metadata:
  name: denyall
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    imagePrefix: ["tom"]
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyall
  annotations:
    description: denyall pods
spec:
  crd:
    spec:
      names:
        kind: K8sDenyAll
      validation:
        openAPIV3Schema:
          type: object
          properties:
            test:
              description: "testing stuff"
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        <PLACEHOLDER>
